fixed logo spacing

--- a/webpro/public/styles/global.css
+++ b/webpro/public/styles/global.css
@@ -85,8 +85,9 @@ body::before {
 
     /* changes ↓ */
     /* shrink-wrap to the text */
-    margin-top: 10px;
-    margin: 0 auto;
+    margin-top: 3px;
+    margin-bottom: 15px;
+    /* margin: 0 auto; */
     /* now this truly centers the div */
     text-align: center;
     /* still needed if you keep the <p> */
